<resources>
    <string name="app_name">Food Market Kotlin</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email Address</string>
    <string name="email_hint">Type your email address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_hint">Type your password</string>
    <string name="confirm_password_hint">Type your password again</string>
    <string name="full_name">Full Name</string>
    <string name="name">Name</string>
    <string name="full_name_hint">Type your full name</string>
    <string name="phone">Phone Number</string>
    <string name="phone_hint">Type your phone number</string>
    <string name="address">Address</string>
    <string name="address_hint">Type your address</string>
    <string name="house_number">House Number</string>
    <string name="house_number_hint">Type your house number</string>
    <string name="city">City</string>
    <string name="city_hint">Type your city</string>
    <string name="next">Continue</string>
    <string name="create_new">Create New Account</string>
    <string name="add_photo">Add Photo</string>
    <string name="title_sign_in">Sign In</string>
    <string name="subtitle_sign_in">Find your best ever meal</string>
    <string name="title_signup">Sign Up</string>
    <string name="subtitle_signup">Create your account to start</string>
    <string name="title_signup_address">Address</string>
    <string name="subtitle_signup_address">Make sure it is valid</string>
    <string name="title_sign_up_success">Yeay! Completed</string>
    <string name="subtitle_sign_up_success">Now you are able to order some food as a self-reward</string>
    <string name="find_food">Find Food</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_order">Order</string>
    <string name="title_profile">Profile</string>
    <string name="caption_home">Let\'s get some food</string>
    <string name="title_order_empty">Ouch! Hungry</string>
    <string name="subtitle_order_empty">Seem like you have not\nordered any food yet</string>
    <string name="title_new_taste">New Taste</string>
    <string name="title_popular">Popular</string>
    <string name="title_recommended">Recommended</string>
    <string name="title_ingredient">Ingredients</string>
    <string name="total_price">Total Price</string>
    <string name="order_total">Total Order</string>
    <string name="payment_total">Total Payment</string>
    <string name="title_payment">Payment</string>
    <string name="subtitle_payment">You deserve better meal</string>
    <string name="tax">Tax</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="order_now">Order Now</string>
    <string name="order_made">You\'ve Made Order</string>
    <string name="order_made_subtitle">Just stay at home while\nwe are preparing your food</string>
    <string name="order_other">Order Other Food</string>
    <string name="view_order">See My Order</string>
    <string name="checkout">Checkout Now</string>
    <string name="long_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut suscipit repudiandae non alias. Quaerat debitis placeat accusantium ipsa, nulla vitae reprehenderit excepturi. Dolore tenetur quas harum reprehenderit autem veniam reiciendis, dolor amet blanditiis dolores quibusdam ipsam culpa repudiandae est corporis eos pariatur accusamus cumque perspiciatis magnam asperiores sed. Nam et hic iste voluptatum, quaerat consequatur soluta.</string>
    <string name="item_order">Item Ordered</string>
    <string name="detail_order">Detail Order</string>
    <string name="delivered_to">Delivered to</string>

    <string name="email_empty">Email Address must not be empty!</string>
    <string name="invalid_email">Invalid Email Address!</string>
    <string name="invalid_phone">Invalid Phone Number!</string>
    <string name="name_empty">Name must not be empty!</string>
    <string name="password_empty">Password must not be empty!</string>
    <string name="password_min8">Password must have at least 8 characters!</string>
    <string name="confpass_empty">Confirm Password must not be empty!</string>
    <string name="confpass_unmatched">Confirm Password is not matched!</string>
    <string name="address_empty">Address must not be empty!</string>
    <string name="house_empty">House Number must not be empty!</string>
    <string name="phone_empty">Phone Number must not be empty!</string>
    <string name="city_empty">City must not be empty!</string>

    <string name="no_data">No Data Available</string>
    <string name="title_orders">Your Orders</string>
    <string name="subtitle_order">Wait for the best meal</string>

    <string name="confirm_order">Confirm Order</string>
    <string name="pay_order">Pay Now</string>
    <string name="ok">OK</string>

    <string name="order_created_at">Ordered at</string>
    <string name="status">Status</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="order_code">Order ID</string>
    <string name="title_confirm">Confirm Order</string>
    <string name="subtitle_confirm">Are your sure want to confirm this order?</string>
    <string name="title_checkout">Order Food</string>
    <string name="subtitle_checkout">Are your sure want to order this food?</string>
    <string name="order_confirmed">Order Confirmed Successfully</string>
    <string name="order_confirmed_error">Failed to Confirm Order!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancelled">Cancelled</string>
    <string name="pending">Waiting Payment</string>
    <string name="on_delivery">On Delivery</string>
    <string name="success">Completed</string>
    <string name="on_process">On Process</string>
    <string name="title_logout">Log Out</string>
    <string name="change_password">Change Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_address">Home Address</string>
    <string name="subtitle_logout">Are you sure want to end your session?</string>
    <string name="logout_success">Successfully Logout</string>
    <string name="title_exit">Exit</string>
    <string name="subtitle_exit">Are you sure want to exit ?</string>
    <string name="tap_again">Tap once again to exit</string>
    <string name="title_edit_profile">Edit Data</string>
    <string name="subtitle_edit_profile">Update your current data</string>
    <string name="title_edit_address">Address</string>
    <string name="subtitle_edit_address">Update your current address</string>
    <string name="title_save">Save</string>
    <string name="title_submit">Submit</string>
    <string name="data_updated">Data has been updated successfully</string>
    <string name="rate_app">Rate App</string>
    <string name="help_center">Help Center</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_condition">Terms and Conditions</string>

</resources>