<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundWhite"
    android:orientation="vertical"
    tools:context=".ui.profile.editprofile.EditProfileFragment">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:orientation="vertical"
    android:paddingVertical="8dp">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_edit_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="30dp"
        app:titleTextAppearance="@style/TextView.titleToolbarStyle"
        app:subtitleTextAppearance="@style/TextView.subtitleToolbarStyle"
        app:title="@string/title_edit_profile"
        app:subtitle="@string/subtitle_edit_profile"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:text="@string/full_name"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_500"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginHorizontal="24dp"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:maxLines="1"
        android:hint="@string/full_name_hint"
        android:fontFamily="@font/poppins_400"
        android:textSize="15sp"
        android:paddingHorizontal="12dp"
        android:paddingVertical="14dp"
        android:background="@drawable/custom_edit_text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:text="@string/email"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_500"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginHorizontal="24dp"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:hint="@string/email_hint"
        android:fontFamily="@font/poppins_400"
        android:textSize="15sp"
        android:paddingHorizontal="12dp"
        android:paddingVertical="14dp"
        android:background="@drawable/custom_edit_text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:text="@string/phone"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_500"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginHorizontal="24dp"
        android:inputType="number"
        android:maxLines="1"
        android:hint="@string/phone_hint"
        android:fontFamily="@font/poppins_400"
        android:textSize="15sp"
        android:paddingHorizontal="12dp"
        android:paddingVertical="14dp"
        android:background="@drawable/custom_edit_text"/>

</LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:layout_alignParentBottom="true"
        android:id="@+id/button_edit_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/custom_button"
        android:paddingVertical="15dp"
        android:text="@string/title_submit"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins_600"
        android:textColor="@color/accentColor"
        android:textSize="16sp"/>


</RelativeLayout>