<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.auth.SignupFragment">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_marginTop="24dp"
    android:paddingHorizontal="24dp"
    android:paddingTop="25dp">

    <ImageView
        android:id="@+id/signup_photo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_picture_empty"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_500"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/signup_name"
        android:inputType="textCapWords"
        android:maxLines="1"
        android:capitalize="words"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/full_name_hint"
        android:fontFamily="@font/poppins_400"
        android:textSize="15sp"
        android:paddingHorizontal="12dp"
        android:paddingVertical="12dp"
        android:background="@drawable/custom_edit_text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_500"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/signup_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/email_hint"
        android:fontFamily="@font/poppins_400"
        android:textSize="15sp"
        android:paddingHorizontal="12dp"
        android:paddingVertical="12dp"
        android:background="@drawable/custom_edit_text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_500"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/signup_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:fontFamily="@font/poppins_400"
        android:textSize="15sp"
        android:layout_marginBottom="16dp"
        android:paddingHorizontal="12dp"
        android:paddingVertical="12dp"
        android:background="@drawable/custom_edit_text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_500"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/signup_confirm_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:fontFamily="@font/poppins_400"
        android:textSize="15sp"
        android:paddingHorizontal="12dp"
        android:paddingVertical="12dp"
        android:background="@drawable/custom_edit_text"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/custom_button"
        android:paddingVertical="15dp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins_600"
        android:textColor="@color/accentColor"
        android:textSize="16sp"/>


</LinearLayout>
</androidx.core.widget.NestedScrollView>