<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundWhite"
    tools:context=".ui.profile.editaddress.EditAddressFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:paddingVertical="8dp">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_edit_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="30dp"
            app:titleTextAppearance="@style/TextView.titleToolbarStyle"
            app:subtitleTextAppearance="@style/TextView.subtitleToolbarStyle"
            app:title="@string/title_edit_address"
            app:subtitle="@string/subtitle_edit_profile"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:text="@string/address"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_500"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/edit_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginHorizontal="24dp"
            android:inputType="textCapWords"
            android:capitalize="words"
            android:maxLines="1"
            android:hint="@string/address"
            android:fontFamily="@font/poppins_400"
            android:textSize="15sp"
            android:paddingHorizontal="12dp"
            android:paddingVertical="14dp"
            android:background="@drawable/custom_edit_text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:text="@string/house_number"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_500"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/edit_house_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginHorizontal="24dp"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:hint="@string/house_number_hint"
            android:fontFamily="@font/poppins_400"
            android:textSize="15sp"
            android:paddingHorizontal="12dp"
            android:paddingVertical="14dp"
            android:background="@drawable/custom_edit_text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:text="@string/city"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_500"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/edit_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginHorizontal="24dp"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:hint="@string/city_hint"
            android:fontFamily="@font/poppins_400"
            android:textSize="15sp"
            android:paddingHorizontal="12dp"
            android:paddingVertical="14dp"
            android:background="@drawable/custom_edit_text"/>

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:layout_alignParentBottom="true"
        android:id="@+id/button_edit_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/custom_button"
        android:paddingVertical="15dp"
        android:text="@string/title_submit"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins_600"
        android:textColor="@color/accentColor"
        android:textSize="16sp"/>

</RelativeLayout>