<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_marginTop="24dp"
    android:paddingHorizontal="24dp"
    android:paddingTop="25dp"
    tools:context=".ui.auth.SigninFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_500"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/signin_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:hint="@string/email_hint"
        android:fontFamily="@font/poppins_400"
        android:textSize="15sp"
        android:paddingHorizontal="12dp"
        android:paddingVertical="14dp"
        android:background="@drawable/custom_edit_text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_500"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/signin_pasword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:fontFamily="@font/poppins_400"
        android:textSize="15sp"
        android:paddingHorizontal="12dp"
        android:paddingVertical="14dp"
        android:background="@drawable/custom_edit_text"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_button"
        android:paddingVertical="15dp"
        android:text="@string/title_sign_in"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins_600"
        android:textColor="@color/accentColor"
        android:textSize="16sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signin_to_signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingVertical="15dp"
        android:background="@drawable/custom_secondary_button"
        android:text="@string/create_new"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins_500"
        android:textColor="@color/black"
        android:textSize="15sp"/>

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:passwordToggleEnabled="true">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:padding="12dp"-->
<!--            android:hint="@string/password_hint"-->
<!--            android:background="@drawable/custom_edit_text"-->
<!--            />-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->

</LinearLayout>