<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.detail.PaymentSuccessFragment">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="212dp"
            android:layout_height="220dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="8dp"
            android:src="@drawable/ic_success_order"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_600"
            android:text="@string/order_made"
            android:textAlignment="center"
            android:textColor="@color/primaryColor"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_signup_success" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_400"
            android:text="@string/order_made_subtitle"
            android:textAlignment="center"
            android:textColor="@color/grey40"
            android:textSize="16sp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_order_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/poppins_600"
            android:paddingVertical="16dp"
            android:text="@string/order_other"
            android:textAllCaps="false"
            android:textColor="@color/accentColor"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_view_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingVertical="16dp"
            android:background="@drawable/custom_secondary_button"
            android:text="@string/view_order"
            android:textAllCaps="false"
            android:fontFamily="@font/poppins_400"
            android:textColor="@color/grey40"
            android:textSize="15sp"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>